[package]
name = "iron-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22" # For encoding/decoding header fields if needed, standard for vault files.
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.7", features = ["derive"] } # For clearing memory
secrecy = { version = "0.10", features = ["serde"] }

thiserror = "1.0" # For better error handling
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.0"
arboard = "3.3"
colored = "2.0"
inquire = "0.7"

